# Overtone

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: Overtone.cpp  tests.cpp
src/: ColorMap.cpp  ColorMap.h  FFmpeg.cpp  FFmpeg.h  JSON.cpp  JSON.h  Keyboard.cpp  Keyboard.h  KeyboardFrequencies.cpp  KeyboardFrequencies.h  LinearInterpolation.cpp  LinearInterpolation.h  OvertoneApp.cpp  OvertoneApp.h  README.md  RGBColor.cpp  RGBColor.h  Spectrum.cpp  Spectrum.h  Tests.cpp  Tests.h  VideoFrame.cpp  VideoFrame.h  WAVE.cpp  WAVE.h
test/: test_KeyboardFrequencies.cpp  test_LinearInterpolation.cpp  test_RGBColor.cpp
